--- a/first.html
+++ b/first.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zardosan Couture</title>
+    <link rel="stylesheet" href="first.css">
 </head>
 <body>
     <h1>Products Catagory</h1>
@@ -16,7 +17,5 @@
     <p>White muslin <i>shawls</i> , as well as white embroidered muslin dresses or pelisses were specially made in <b>Bangladesh</b>  for the <b> European</b> market and ready to be sewn.</p>   
     <img src="shawl.JPEG" alt="White Muslin Shawl">    
     <a href="https://www.pinterest.com/pin/467459636305140840/">Pinterest Image</a>
-    
-
 </body>
 </html>
