--- a/first.html
+++ b/first.html
@@ -17,5 +17,6 @@
     <p>White muslin <i>shawls</i> , as well as white embroidered muslin dresses or pelisses were specially made in <b>Bangladesh</b>  for the <b> European</b> market and ready to be sewn.</p>   
     <img src="shawl.JPEG" alt="White Muslin Shawl">    
     <a href="https://www.pinterest.com/pin/467459636305140840/">Pinterest Image</a>
+    <img src="khalid bhai.jpg" alt="khalid">
 </body>
 </html>
